# stringextn

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml
stringextn/: __init__.py  cases.py  clean.py  contains.py  fuzzy.py  replace.py  security.py  slug.py
tests/: test_cases.py  test_clean.py  test_contains.py  test_fuzzy.py  test_replace.py  test_security.py  test_slug.py
