[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stringextn"
version = "1.0.3"
description = "Pragmatic string utilities for APIs and data cleaning"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Balaji Katta Venkatarathnam" }
]
keywords = ["string", "text", "utilities", "slug", "mask", "cleaning"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["venv*", "tests*"]

[project.urls]
Homepage = "https://github.com/balaji-kv/stringextn"
Source = "https://github.com/balaji-kv/stringextn"
Issues = "https://github.com/balaji-kv/stringextn/issues"

